df[0:5] & df.iloc[0:5] & df.loc[0:5]

--- a/pandas/learning_1.ipynb
+++ b/pandas/learning_1.ipynb
@@ -443,7 +443,9 @@
    "metadata": {},
    "source": [
     "### 3、查询行\n",
-    "* loc[0:2] ：index 0和1，不包括2"
+    "\n",
+    "* loc[2:6] ：6-2,index 2345，不包括6；但是一定是index是数字，如果index修改了（改成时间）的，就会报错，此时该用iloc \n",
+    "* df[2:6] 不管改不改 index"
    ]
   },
   {
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +656,7 @@
        "4  2018-01-05     3℃    -6℃   多云~晴       西北风   1-2级   50       优         1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -700,6 +702,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>ymd</th>\n",
        "      <th>bWendu</th>\n",
        "      <th>yWendu</th>\n",
        "      <th>tianqi</th>\n",
@@ -709,21 +712,11 @@
        "      <th>aqiInfo</th>\n",
        "      <th>aqiLevel</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ymd</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-01-01</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
        "      <td>3℃</td>\n",
        "      <td>-6℃</td>\n",
        "      <td>晴~多云</td>\n",
@@ -734,7 +727,8 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-02</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-02</td>\n",
        "      <td>2℃</td>\n",
        "      <td>-5℃</td>\n",
        "      <td>阴~多云</td>\n",
@@ -745,7 +739,8 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-03</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-03</td>\n",
        "      <td>2℃</td>\n",
        "      <td>-5℃</td>\n",
        "      <td>多云</td>\n",
@@ -756,7 +751,8 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-04</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-04</td>\n",
        "      <td>0℃</td>\n",
        "      <td>-8℃</td>\n",
        "      <td>阴</td>\n",
@@ -767,7 +763,8 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-01-05</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-05</td>\n",
        "      <td>3℃</td>\n",
        "      <td>-6℃</td>\n",
        "      <td>多云~晴</td>\n",
@@ -777,27 +774,172 @@
        "      <td>优</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-01-06</td>\n",
+       "      <td>2℃</td>\n",
+       "      <td>-5℃</td>\n",
+       "      <td>多云~阴</td>\n",
+       "      <td>西南风</td>\n",
+       "      <td>1-2级</td>\n",
+       "      <td>32</td>\n",
+       "      <td>优</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-01-07</td>\n",
+       "      <td>2℃</td>\n",
+       "      <td>-4℃</td>\n",
+       "      <td>阴~多云</td>\n",
+       "      <td>西南风</td>\n",
+       "      <td>1-2级</td>\n",
+       "      <td>59</td>\n",
+       "      <td>良</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-01-08</td>\n",
+       "      <td>2℃</td>\n",
+       "      <td>-6℃</td>\n",
+       "      <td>晴</td>\n",
+       "      <td>西北风</td>\n",
+       "      <td>4-5级</td>\n",
+       "      <td>50</td>\n",
+       "      <td>优</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           bWendu yWendu tianqi fengxiang fengli  aqi aqiInfo  aqiLevel\n",
-       "ymd                                                                    \n",
-       "2018-01-01     3℃    -6℃   晴~多云       东北风   1-2级   59       良         2\n",
-       "2018-01-02     2℃    -5℃   阴~多云       东北风   1-2级   49       优         1\n",
-       "2018-01-03     2℃    -5℃     多云        北风   1-2级   28       优         1\n",
-       "2018-01-04     0℃    -8℃      阴       东北风   1-2级   28       优         1\n",
-       "2018-01-05     3℃    -6℃   多云~晴       西北风   1-2级   50       优         1"
+       "          ymd bWendu yWendu tianqi fengxiang fengli  aqi aqiInfo  aqiLevel\n",
+       "0  2018-01-01     3℃    -6℃   晴~多云       东北风   1-2级   59       良         2\n",
+       "1  2018-01-02     2℃    -5℃   阴~多云       东北风   1-2级   49       优         1\n",
+       "2  2018-01-03     2℃    -5℃     多云        北风   1-2级   28       优         1\n",
+       "3  2018-01-04     0℃    -8℃      阴       东北风   1-2级   28       优         1\n",
+       "4  2018-01-05     3℃    -6℃   多云~晴       西北风   1-2级   50       优         1\n",
+       "5  2018-01-06     2℃    -5℃   多云~阴       西南风   1-2级   32       优         1\n",
+       "6  2018-01-07     2℃    -4℃   阴~多云       西南风   1-2级   59       良         2\n",
+       "7  2018-01-08     2℃    -6℃      晴       西北风   4-5级   50       优         1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.head()"
+    "df1.head(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ymd</th>\n",
+       "      <th>bWendu</th>\n",
+       "      <th>yWendu</th>\n",
+       "      <th>tianqi</th>\n",
+       "      <th>fengxiang</th>\n",
+       "      <th>fengli</th>\n",
+       "      <th>aqi</th>\n",
+       "      <th>aqiInfo</th>\n",
+       "      <th>aqiLevel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>2℃</td>\n",
+       "      <td>-5℃</td>\n",
+       "      <td>多云</td>\n",
+       "      <td>北风</td>\n",
+       "      <td>1-2级</td>\n",
+       "      <td>28</td>\n",
+       "      <td>优</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>0℃</td>\n",
+       "      <td>-8℃</td>\n",
+       "      <td>阴</td>\n",
+       "      <td>东北风</td>\n",
+       "      <td>1-2级</td>\n",
+       "      <td>28</td>\n",
+       "      <td>优</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>3℃</td>\n",
+       "      <td>-6℃</td>\n",
+       "      <td>多云~晴</td>\n",
+       "      <td>西北风</td>\n",
+       "      <td>1-2级</td>\n",
+       "      <td>50</td>\n",
+       "      <td>优</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-01-06</td>\n",
+       "      <td>2℃</td>\n",
+       "      <td>-5℃</td>\n",
+       "      <td>多云~阴</td>\n",
+       "      <td>西南风</td>\n",
+       "      <td>1-2级</td>\n",
+       "      <td>32</td>\n",
+       "      <td>优</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ymd bWendu yWendu tianqi fengxiang fengli  aqi aqiInfo  aqiLevel\n",
+       "2  2018-01-03     2℃    -5℃     多云        北风   1-2级   28       优         1\n",
+       "3  2018-01-04     0℃    -8℃      阴       东北风   1-2级   28       优         1\n",
+       "4  2018-01-05     3℃    -6℃   多云~晴       西北风   1-2级   50       优         1\n",
+       "5  2018-01-06     2℃    -5℃   多云~阴       西南风   1-2级   32       优         1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[2:6]"
    ]
   },
   {
